Autowiring fixed on runtimeState. Parallel runers added to pom - but not yet working. Snapshots now taken when sys property snapshots=true